msm8998-common: Xiaomi parts: checkout dirac from branch '10' of https://github.com/AOSP-10/device_xiaomi_msm8998-common

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -38,6 +38,22 @@
             android:name=".DisplayCalibrationActivity"
             android:exported="true" >
         </activity>
+
+        <activity 
+            android:name=".DiracActivity"
+            android:label="@string/dirac_title">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.sound" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/dirac_summary" />
+        </activity>
+
         <receiver android:name="org.omnirom.device.Startup">
             <intent-filter android:priority="100">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
