msm8998-common: Xiaomi parts: Add dirac entry

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -46,6 +46,11 @@
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
 
+            <intent-filter>
+                <action android:name="org.omnirom.device.DiracActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.sound" />
